opam-version: "2.0"
version: "0.1"
maintainer: "Ramil Farkhshatov <ramil.fh@ya.ru>"
authors: ["Ramil Farkhshatov"]
license: "LGPLv3 with OpenSSL linking exception"
build: ["dune" "build" "-j" jobs "-p" name]
synopsis: "Unix support for simple TAR format (de)serializer"
depends: [
  "base-unix"
  "pluk-tar"
]
